--- a/geog311_lab2.ipynb
+++ b/geog311_lab2.ipynb
@@ -28,7 +28,7 @@
     "\\end{equation}\n",
     "\n",
     "\n",
-    "Typical strengths associated with soils at their plastic limit are 110-130 $kN~m^{-2}$ while those near their liquid limit are between 1-3 $kN~m^{-2}$. These rheological limits were originally proposed by  Atterberg and later defined by Casagrade, two prominent earth scientists.\n",
+    "Typical strengths associated with soils at their plastic limit are 110-130 $kN~m^{-2}$ while those near their liquid limit are between 1-3 $kN~m^{-2}$. These rheological limits were originally proposed by  [Atterberg](https://en.wikipedia.org/wiki/Albert_Atterberg), and  [Casagrade](https://en.wikipedia.org/wiki/Arthur_Casagrande) later refined them. \n",
     "\n",
     "## 2. Plastic Limit Determination\n",
     "\n",
@@ -48,17 +48,15 @@
     "\n",
     "## 3. Liquid Limit Determination (Casagrande Cup)\n",
     "\n",
-    "$W_{l}$ is estimated by the water content at which a 13 mm wide groove closes after dropping the sediment sample (aka a blow)  25 times over a distance of 1 cm using a Casagrande measuring device. The higher the water content, the smaller the number of blows required to cause closure of the groove by plastic deformation. However, the water content of the sample will rarely be correct to close the groove for exactly 25 blows. We therefore will record the number of blows for samples of different water content and then develop a linear model to estimate $W_{l}$. \\textbf{Note: It is important that you complete the Casagrande analysis a number of times at different water contents in order to prevent extrapolation of $W_{l}$}.\n",
+    "$W_{l}$ is estimated by the water content at which a 13 mm wide groove closes after dropping the sediment sample (aka a blow)  25 times over a distance of 1 cm using a Casagrande measuring device. The higher the water content, the smaller the number of blows required to cause closure of the groove by plastic deformation. However, the water content of the sample will rarely be correct to close the groove for exactly 25 blows. We therefore will record the number of blows for samples of different water content and then develop a linear model to estimate $W_{l}$. \n",
+    "**Note: ** It is important that you complete the Casagrande analysis a number of times at different water contents in order to prevent extrapolation of $W_{l}$}.\n",
     "\n",
-    "\\begin{figure} \n",
-    "\\includegraphics[width=4in, height=4in]{cass_cup.jpg}\n",
-    "\\caption{Casagrande liquid limit measuring device}\\label{casagrande}\n",
-    "\\end{figure}\n",
+    "![Casagrande cup](cass_cup.jpg \"Cassagrande Cup\")\n",
     "\n",
     "\n",
     "1. Place a sample (about 250 g) of sieved soil into a weighing container. Slowly add water until you make a very thick paste (make sure that it is homogeneous and well mixed) and does not adhere to the sides of the dish. It should have the consistency of bread dough (you should be able to use a sample from your previous analysis).\n",
     "\n",
-    "2. Verify fall distance of cup is 1 cm, and if not, set with adjusting screw (you can measure fall distance with back side of grooving tool see figure \\ref{casagrande}).\n",
+    "2. Verify fall distance of cup is 1 cm, and if not, set with adjusting screw (you can measure fall distance with back side of grooving tool see figure above).\n",
     "\n",
     "3. Place a portion of the soil into the cup, level, and cut a small groove into soil sample with grooving tool (2 mm wide).\n",
     "\n",
@@ -66,8 +64,88 @@
     "\n",
     "5. While rotating handle, carefully observe groove and stop test when bottom of groove closes at least 13 mm (the width of the raised portion of the grooving tool). Record number of blows and collect a sample of this material from **where the grooved edge closed** into tared container, weigh, and place in oven. Repeat steps 4-5 two or more more times adding more water to sample for each experiment. \n",
     "\n",
-    "\n"
+    "\n",
+    "## 4. Direct Shear Box Test\n",
+    "\n",
+    "### Background\n",
+    "\n",
+    "During this second component of the laboratory exercise, you will determine the shear strength of sediment. The Mohr-Coulomb equation expresses the total strength (S) of unconsolidated sediment:  \n",
+    "\n",
+    "\\begin{equation}\n",
+    "S = c + (\\sigma -\\mu)\\cdot\\tan(\\phi) \n",
+    "\\end{equation}\n",
+    "\n",
+    "where c is the cohesion (kPa), $\\sigma$ is the normal stress (kPa), $\\mu$ is the pore water pressure (kPa), and $\\phi$ is the angle of internal friction (degrees). For drained materials $\\mu$=0. As we will see in a later laboratory exercise, slope stability analysis often require\n",
+    "estimates of $\\phi$ and $c$ for a given hillslope. \n",
+    "\n",
+    "### Shear Box\n",
+    "\n",
+    "A shear box is one device that can be used to estimate $\\phi$ and $c$. As the name implies, the experiment applies a shear force ($\\tau$ when this force is expressed as a stress) to a unit of sediment or soil until the material fails. At this point $\\tau=S$. The box consists of two sections; the lower section is fastened to a stable frame. A wire is attached to the upper component of the box and a series of weights. These weights represent the shear force ($\\tau$). The experiment is run by adding various normal weight to the top of the box. The added weight (weight plus weight of box cover) is divided by the area of the box ($m^2$) to give the normal stress (kPa). The experiment is run for various levels of $\\sigma$ to determine $c$ and $\\phi$.\n",
+    "\n",
+    "### Procedure\n",
+    "\n",
+    "To complete the experiment do the following:\n",
+    "\n",
+    "1. Make sure that the shear box is empty.\n",
+    "\n",
+    "2. Place brass shim stocks (friction reduction) between edges of box so that the inside edge of the strips is flush with the inside edge of the box.\n",
+    "\n",
+    "3. SLOWLY add water to pail attached to cable with empty box to determine magnitude of friction (we will subtract this friction from shear stress). Once upper box begins to move, stop experiment and record weight of water+pail. \n",
+    "\n",
+    "4. Carefully add soil to lower half of box until level with future shear plane. You can level it with your hand but try to avoid getting soil around shims.\n",
+    "\n",
+    "5. Tare a beaker and fill with $\\approx$1 kg of soil. Record weight. Now carefully add to upper component of box and carefully level. Record weight of lid and place on top. DO NOT PACK DOWN !\n",
+    "\n",
+    "6. Add water again. Upon ANY movement of box, stop test, record weight of cover and pail + water. One person should observe edge of box while other person is slowly adding water. \n",
+    "\n",
+    "7. Repeat experiment at least three more times increasing normal weight each time (use small bricks provided). Be sure that they sit evenly on top of cover and that soil is leveled (NOT TAMPED) before each experimental run.\n",
+    "\n",
+    "## Calculation and Write Up: 10 Points \n",
+    "\n",
+    "1. Determine c and $\\phi$ from your empirical data. \n",
+    "2. Discuss sources of error in the analysis and situations when our shear box will not work. \n",
+    "\n",
+    "Submit graphs of your results including axes with correct units specified.  Include a table showing the slope and y-intercept values of your line of best fit and the 95% confidence intervals for these values. Go back to Lab 1 if you can't remember how to make a linear model in Python. \n",
+    "\n",
+    "The 95% confidence limit is standard error $\\cdot$ 1.96 $\\pm$. Also,  be sure to express $\\phi$ in degrees. To convert a slope value expressed as a fraction into degrees you need to take the arctangent of the number and multiply by 180/pi. \n",
+    "\n",
+    "\n",
+    "## Comparison to other work:  10 Points \n",
+    "\n",
+    "1. The material you used in the shear box is called Ottawa Sand and, over the years, the angle of repose has been repeatedly measured by GEOG-210 students. Remember that for unconsolidated sediments the  angle of repose ($\\alpha$) approximates $\\phi$.  Determine whether your measurement of $\\phi$ lies within the 95% confidence limit of the average\\footnote{Recall that the 95% confidence limit about the mean can be determined by multiplying the standard error (SE) by $\\pm$ 1.96. SE=$\\frac{\\sigma}{\\sqrt{N}}$, where $\\sigma$ is the standard deviation and N is the sample size.} or $\\alpha$ (file 'respose.txt' found in the lab2 directory). \n",
+    "\n",
+    "\n",
+    "The file 'mink.txt'  represents a collection of geotechnical measurements for sediment samples collected from the Mink Creek Earthflow post failure **Thanks to Mr. Marten Geertsema (BC Forest Service) for providing access to the data. **. The variables (working across the columns) are: Sample depth [m] (Depth), Water content [% by weight] (W), Liquid limit ($W_{l}$), Plastic limit ($W_{p}$), Plasticity Index($I_{p}$), Activity, Sand (%),Silt (%), Clay (%), Undisturbed shear strength strength (Ushear), Remoulded shear strength (Dshear), and pore water cations, (NA, K, and Mg).\n",
+    "\n",
+    "\n",
+    "Like $I_{p}$, activity (A) and sensitivity (S) are also important geotechnical properties of fine-grained sediment:\n",
+    "\n",
+    "\\begin{equation}\n",
+    "A = \\frac{I_{p}}{Clay (\\%)}\n",
+    "\\end{equation}\n",
+    "\n",
+    "and:\n",
+    "\n",
+    "\\begin{equation}\n",
+    "S = \\frac{Ushear}{Dshear}\n",
+    "\\end{equation}\n",
+    "\n",
+    "\n",
+    "1. Determine A and S for the given samples and plot them as a function of depth. Do these  variables vary as a function of depth?  What are the mean and standard deviations of A and S? Can this clay be classified as insensitive, sensitive, or quick?\n",
+    "\n",
+    "2. How do your measurements (all of them as individual soil teams) of $W_{l}$, $W_{p}$, and $I_{p}$ compare to the measurements made by the geotechnical soil company. Discuss factors that might lead to observed differences.\n",
+    "\n",
+    "**hint:**  You need to replace the missing values in the variable 'Activity' with actual values. You first need to calculate $I_{p}$."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
