--- a/geog311_lab2.ipynb
+++ b/geog311_lab2.ipynb
@@ -51,17 +51,11 @@
     "$W_{l}$ is estimated by the water content at which a 13 mm wide groove closes after dropping the sediment sample (aka a blow)  25 times over a distance of 1 cm using a Casagrande measuring device. The higher the water content, the smaller the number of blows required to cause closure of the groove by plastic deformation. However, the water content of the sample will rarely be correct to close the groove for exactly 25 blows. We therefore will record the number of blows for samples of different water content and then develop a linear model to estimate $W_{l}$. \n",
     "**Note: ** It is important that you complete the Casagrande analysis a number of times at different water contents in order to prevent extrapolation of $W_{l}$}.\n",
     "\n",
-    "\n",
     "<tr>\n",
-    "    <td> <img src=\"cass_cup.jpg\" alt=\"Cassagrande Cup\" style=\"width: 250px;\"/> </td>\n",
-    "    <td> <img src=\"liquid_limit.jpg\" alt=\"Liquid Limit\" style=\"width: 250px;\"/> </td>\n",
+    "    <td> <img src=\"cass_cup.jpg\" alt=\"Cassagrande Cup\" title=\"Cassagrande testing cup\" style=\"width: 500px;\"/> </td>\n",
+    "    <td> <img src=\"liquid_limit.jpg\" alt=\"Liquid Limit\" title=\"Relation between water and number of blows\" style=\"width: 500px;\"/> </td>\n",
     " </tr>\n",
     "    \n",
-    "\n",
-    "![Casagrande cup](cass_cup.jpg \"Cassagrande cup\")\n",
-    "\n",
-    "![Liquid Limit](liquid_limit.jpg \"Liquid limit\")\n",
-    "\n",
     "\n",
     "1. Place a sample (about 250 g) of sieved soil into a weighing container. Slowly add water until you make a very thick paste (make sure that it is homogeneous and well mixed) and does not adhere to the sides of the dish. It should have the consistency of bread dough (you should be able to use a sample from your previous analysis).\n",
     "\n",
@@ -146,6 +140,15 @@
     "\n",
     "**hint:**  You need to replace the missing values in the variable 'Activity' with actual values. You first need to calculate $I_{p}$."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
