--- a/geog311_lab2.ipynb
+++ b/geog311_lab2.ipynb
@@ -97,7 +97,7 @@
     "\n",
     "4. Carefully add soil to lower half of box until level with future shear plane. You can level it with your hand but try to avoid getting soil around shims.\n",
     "\n",
-    "5. Tare a beaker and fill with $\\approx$1 kg of soil. Record weight. Now carefully add to upper component of box and carefully level. Record weight of lid and place on top. DO NOT PACK DOWN !\n",
+    "5. Tare a beaker and fill with approximiately 1 kg of soil. Record weight. Now carefully add to upper component of box and carefully level. Record weight of lid and place on top. DO NOT PACK DOWN !\n",
     "\n",
     "6. Add water again. Upon ANY movement of box, stop test, record weight of cover and pail + water. One person should observe edge of box while other person is slowly adding water. \n",
     "\n",
@@ -110,12 +110,14 @@
     "\n",
     "Submit graphs of your results including axes with correct units specified.  Include a table showing the slope and y-intercept values of your line of best fit and the 95% confidence intervals for these values. Go back to Lab 1 if you can't remember how to make a linear model in Python. \n",
     "\n",
-    "The 95% confidence limit is standard error $\\cdot$ 1.96 $\\pm$. Also,  be sure to express $\\phi$ in degrees. To convert a slope value expressed as a fraction into degrees you need to take the arctangent of the number and multiply by 180/pi. \n",
+    "**note:**Recall that the 95% confidence limit about the mean or y-intercept can be determined by adding or differencing ( $\\pm$ 1.96 $\\cdot$ standard error (SE))  \n",
+    "\n",
+    "Be sure to express $\\phi$ in degrees. To convert a slope value expressed as a fraction into degrees you need to take the arctangent of the number and multiply by 180/pi. \n",
     "\n",
     "\n",
     "## Comparison to other work:  10 Points \n",
     "\n",
-    "1. The material you used in the shear box is called Ottawa Sand and, over the years, the angle of repose has been repeatedly measured by GEOG-210 students. Remember that for unconsolidated sediments the  angle of repose ($\\alpha$) approximates $\\phi$.  Determine whether your measurement of $\\phi$ lies within the 95% confidence limit of the average\\footnote{Recall that the 95% confidence limit about the mean can be determined by multiplying the standard error (SE) by $\\pm$ 1.96. SE=$\\frac{\\sigma}{\\sqrt{N}}$, where $\\sigma$ is the standard deviation and N is the sample size.} or $\\alpha$ (file 'respose.txt' found in the lab2 directory). \n",
+    "1. The material you used in the shear box is called Ottawa Sand and, over the years, the angle of repose has been repeatedly measured by GEOG-210 students (these data are contained in the file 'repose.txt'). Remember that for unconsolidated sediments the  angle of repose ($\\alpha$) approximates $\\phi$.  Determine whether your measurement of $\\phi$ lies within the 95% confidence limit of the average.\n",
     "\n",
     "\n",
     "The file 'mink.txt'  represents a collection of geotechnical measurements for sediment samples collected from the Mink Creek Earthflow post failure **Thanks to Mr. Marten Geertsema (BC Forest Service) for providing access to the data. **. The variables (working across the columns) are: Sample depth [m] (Depth), Water content [% by weight] (W), Liquid limit ($W_{l}$), Plastic limit ($W_{p}$), Plasticity Index($I_{p}$), Activity, Sand (%),Silt (%), Clay (%), Undisturbed shear strength strength (Ushear), Remoulded shear strength (Dshear), and pore water cations, (NA, K, and Mg).\n",
