--- a/geog311_lab2.ipynb
+++ b/geog311_lab2.ipynb
@@ -9,6 +9,7 @@
     "# Geography 311, Laboratory 2 (Rheological testing)\n",
     "\n",
     "## objectives and learning outcomes\n",
+    "## Due 30 January, 2017\n",
     "\n",
     "Today we will examine how sediment deforms under applied stress. As discussed in lecture, this behavior is important for understanding the overall stability of a hillslope, and how that material may continue to move downslope if failure occurs. \n",
     "\n",
@@ -49,7 +50,8 @@
     "## 3. Liquid Limit Determination (Casagrande Cup)\n",
     "\n",
     "$W_{l}$ is estimated by the water content at which a 13 mm wide groove closes after dropping the sediment sample (aka a blow)  25 times over a distance of 1 cm using a Casagrande measuring device. The higher the water content, the smaller the number of blows required to cause closure of the groove by plastic deformation. However, the water content of the sample will rarely be correct to close the groove for exactly 25 blows. We therefore will record the number of blows for samples of different water content and then develop a linear model to estimate $W_{l}$. \n",
-    "**Note: ** It is important that you complete the Casagrande analysis a number of times at different water contents in order to prevent extrapolation of $W_{l}$}.\n",
+    "\n",
+    "**Note: ** It is important that you complete the Casagrande analysis a number of times at different water contents in order to prevent extrapolation of $W_{l}$.\n",
     "\n",
     "<tr>\n",
     "    <td> <img src=\"cass_cup.jpg\" alt=\"Cassagrande Cup\" title=\"Cassagrande testing cup\" style=\"width: 500px;\"/> </td>\n",
