--- a/geog311_lab2.ipynb
+++ b/geog311_lab2.ipynb
@@ -190,7 +190,11 @@
     "\n",
     "print(llpl.head())\n",
     "\n",
-    "llpl['per_water'] = (llpl['tare_dry'] - llpl['tare '])/(llpl['tare_wet'] - llpl['tare '])\n",
+    "\n",
+    "## uncomment line below with the equation needed to calculate out water\n",
+    "## content based on the tare and given masses in the file \n",
+    "\n",
+    "## llpl['per_water'] = \n",
     "\n",
     "## estimate lp for first group \n",
     "## what does [0:2] do? It selects (slices) the first and second value\n",
